Mon Mar  5 12:55:30 2007 Enrico Zini <enrico@enricozini.org>

MSAT:
 * Implemented scaling of the the output image
 * Implemented reprojecting image data using the internal projection library

GDTNetCDF:
 * Export regular latitude-longitude grid data in NetCDF using Coards and GDT
   conventions (it allows to save data that can be read by GMT, the Generic
   Mapping Tools)

Image:
 * Allow importers to specify the preferred default file name
 * Handle regular lat-lon gridded data

SAF:
 * Set a preferred default file name with the format
   SAF_{REGION_NAME}_{nome dataset}_{date}

Wed Nov 22 12:07:30 2006 Enrico Zini <enrico@enricozini.org>

	* Version 0.5

HRIT:
 * Very fast and memory-friendly image data access in msat::Image.
 * Implemented recomposition of the HRV image in msat::Image.

GRIB:
 * Added support for correctly reading GRIB files encoded with the ECMWF
   Nightmare Hack for large files.
 * Use the local definition 24 for the PDS.
 * Removed redundant extended PDS.
 * Refined georeferentiation constants to get rid of a shift in the output
   image.

NetCDF:
 * Explicitly encode the value used for missing value.
 * Implemented tracking of the full image processing history.

SAF:
 * Added support for importing SAF H5 images:
   http://www.meteorologie.eu.org/RDT/doc/SAF-NWC-IOP-INM-SW-ICD-3_v1.2.pdf

NetCDF24:
 * Added support for importing and exporting NetCDF24, a dialect of NetCDF
   that organises data in a way similar to a GRIB file.

msat::Image:
 * Created msat library, which implements an encoding-independent satellite
   Image abstraction.
 * Imports from HRIT, GRIB, NetCDF, NetCDF24, SAF.
 * Exports to GRIB, NetCDF, NetCDF24.
 * Implemented crop and rotation.
 * Implemented georeferentiation of image data.
 * Implemented croping an area specified by its coordinates.
 * Implemented exporting as an image file using Magick++.
 * Implemented displaying on X11 via Magick++.
 * Implemented various unit tests.